--- a/buildoutput/Dockerfile
+++ b/buildoutput/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
+ENV ASPNETCORE_URLS=http://+:5000
 COPY . .
 
 ENTRYPOINT ["dotnet", "DotNetCoreRESTAPI.dll"]
