--- a/buildoutput/Dockerfile
+++ b/buildoutput/Dockerfile
@@ -2,5 +2,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:5000
 COPY . .
+EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DotNetCoreRESTAPI.dll"]
